<resources>
    <string name="app_name">Quiz App</string>
    <string name="power_sector">power sector</string>
    <string name="trivia">trivia</string>
    <string name="full_name">full name</string>
    <string name="start">start</string>
    <string name="profile">profile Data</string>
    <string name="fullName">ENTER YOUR FULL NAME</string>
    <string name="countryName">ENTER YOUR COUNTRY </string>
    <string name="stateName">ENTER YOUR STATE</string>
    <string name="genderName">Gender:</string>
    <string name="male">MALE</string>
    <string name="female">female</string>
    <string name="age">Age:</string>
    <string name="_0_14yrs">0-14yrs</string>
    <string name="_15_22yrs">15-22yrs</string>
    <string name="above_40_yrs">above 40 yrs</string>
    <string name="_23_40_yrs">23-40 yrs</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="Quest_1">1. How many Electricity Distribution Companies do we have in Nigeria?</string>
    <string name="Quest_2">2. What is the full meaning of NESI?</string>
    <string name="Quest_3">3. Which of the following are the three main sections of the NESI value chain?</string>
    <string name="Quest_4">4. Which among the following are members of the NESI?</string>
    <string name="Quest_5">5. What year was the privatization of the power sector?</string>
    <string name="Quest_6">6. Which Law governs the activities of the NESI?</string>
    <string name="Quest_7">7. How Many DisCo operate in Lagos State?</string>
    <string name="Quest_8">8. The following are DisCos except?</string>
    <string name="Quest_9">9. What is the unit for electricity consumption?</string>
    <string name="Quest_10">10. Select the items listed below that are associated with electricity supply.</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="Q2Option1">Nigerian Electric Service Infrastructure</string>
    <string name="Q2option2">National Electric Service Industry</string>
    <string name="RQ2option3">Nigerian Electricity supply Industry</string>
    <string name="Q2Option4">New Electricity Synchronization Initiative</string>
    <string name="next">NEXT</string>
    <string name="Q3Option1">Generators, Transformers, Customers</string>
    <string name="Q3option2">Power, Gas and Mining</string>
    <string name="RQ3option3">Generation, Transmission and Distribution</string>
    <string name="Q3option4">Coal, Hydro and Solar</string>
    <string name="RQ4option1">NERC</string>
    <string name="RQ4option2">NBET</string>
    <string name="Q4option3">WHO</string>
    <string name="RQ4option4">IE</string>
    <string name="year">YEAR</string>
    <string name="Q6option1">MYTO 2011</string>
    <string name="RQ6option2">EPSR 2005</string>
    <string name="Q6option3">Power Act 1999</string>
    <string name="Q6option4">Electricity supply Act</string>
    <string name="num">**</string>
    <string name="Q8option1">Ikeja Electric</string>
    <string name="q8option2">Eko Electricity Distribution Company</string>
    <string name="q8option3">Enugu Electricity Distribution Company</string>
    <string name="q8option4">Katsina Electricity Distribution Company</string>
    <string name="Q10option1">Tranformer</string>
    <string name="Q10option3">Wire</string>
    <string name="Q10option4">Feeder</string>
    <string name="Q10option2">Cotton</string>
    <string name="profName">NAME:</string>
    <string name="profileCountry">Country:</string>
    <string name="profileState">STATE: </string>
    <string name="profileAge">GENDER:</string>
    <string name="profileAge_1"> AGE GROUP: </string>
    <string name="name">NAME:</string>
    <string name="country">Country:</string>
    <string name="state">STATE:</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="email_score">Email Score</string>

</resources>
