<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF59D"
    tools:context=".QuestionsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:src="@drawable/coatofarm" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/quest_1_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_9"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_11"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_12"
                        android:textSize="20sp" />

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/testText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_2"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/quest_2_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q2Option1"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q2option2"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RQ2option3"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q2Option4"
                        android:textSize="20sp" />

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_3"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/quest_3_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q3Option1"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q3option2"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RQ3option3"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q3option4"
                        android:textSize="20sp" />

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/Question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_4"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
                <CheckBox
                    android:id="@+id/q4_correct1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/RQ4option1"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/q4_correct2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/RQ4option2"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/q4_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Q4option3"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/q4_correct3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/RQ4option4"
                    android:textColor="#000000"
                    android:textSize="20sp"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/Question_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_5"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
                <EditText
                    android:id="@+id/quest5Input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:inputType="number"
                    android:hint="@string/year"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/Question_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_6"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/quest_6_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q6option1"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RQ6option2"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q6option3"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q6option4"
                        android:textSize="20sp" />

                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/Question_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_7"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
                <EditText
                    android:id="@+id/quest7Input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:inputType="number"
                    android:hint="@string/num"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/Question_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_8"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/quest_8_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Q8option1"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8option2"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8option3"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8option4"
                        android:textSize="20sp" />

                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/Question_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_9"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/quest_9_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kg/m"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="KW/h"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kgm"
                        android:textSize="20sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="KWh"
                        android:textSize="20sp" />

                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/Question_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quest_10"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
                <CheckBox
                    android:id="@+id/q10_wrong1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Q10option1"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/q10_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Q10option2"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/q10_wrong3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Q10option3"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
                <CheckBox
                    android:id="@+id/q10_wrong2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Q10option4"
                    android:textColor="#000000"
                    android:textSize="20sp"/>


            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="showQuestion"
                android:text="@string/next" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>