<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/powerline" />

    <LinearLayout
        android:id="@+id/title_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/power_sector"
            android:textAllCaps="true"
            android:textColor="@color/titleColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/trivia"
            android:textAllCaps="true"
            android:textColor="@color/titleColor"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_section">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/brandnigeria" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:background="#FFFFFF"
                    android:gravity="center_vertical"
                    android:hint="@string/fullName"
                    android:inputType="textMultiLine"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/country"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/country_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="#FFFFFF"
                    android:gravity="center_vertical"
                    android:hint="@string/countryName"
                    android:inputType="text|textMultiLine"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/state"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/state_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="#FFFFFF"
                    android:gravity="center_vertical"
                    android:hint="@string/stateName"
                    android:inputType="textMultiLine"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/genderName"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/age"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/age_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0_14yrs"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_15_22yrs"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_23_40_yrs"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/above_40_yrs"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#000000" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:onClick="getProfileDetails"
                android:text="@string/start_quiz" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>